--- a/server2/requirements.txt
+++ b/server2/requirements.txt
@@ -1,5 +1,5 @@
 # GIFT ZONA Betting Platform - Python Dependencies
-# Рефакторинг архитектуры с улучшенной структурой
+# Railway deployment optimized
 
 # Web Framework
 fastapi>=0.104.0
@@ -10,7 +10,6 @@ asyncpg>=0.29.0
 
 # Telegram
 pyrogram>=2.0.0
-pyrofork
 tgcrypto
 
 # HTTP Clients
@@ -30,11 +29,6 @@ apscheduler>=3.10.0
 # Parsing & Scraping
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
-cloudscraper>=1.2.0
-curl_cffi>=0.5.0
-
-# External APIs
-portalsmp
 
 # System & Process Management
 psutil>=5.9.0
@@ -44,8 +38,4 @@ websockets>=12.0
 
 # Utilities
 pydantic>=2.4.0
-
-# Development (optional)
-# pytest>=7.4.0
-# pytest-asyncio>=0.21.0
 
